# sql

./: .codecov.yml  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Config  NOTICE  README.md  THIRD-PARTY  build.gradle  gradle.properties  opendistro-elasticsearch-sql.release-notes  opendistro-elasticsearch-sql.release-notes.md  pom.xml  settings.gradle  sonar-project.properties
.github/: PULL_REQUEST_TEMPLATE.md  draft-release-notes-config.yml
benchmark/: README.md  build.gradle  casstest.txt  config.json
build-tools/: repositories.gradle  sqlplugin-coverage.gradle
common/: build.gradle
core/: build.gradle
docs/: attributions.md  category.json  developing.rst
doctest/: bootstrap.sh  build.gradle  requirements.txt  test_docs.py
elasticsearch/: build.gradle
integ-test/: build.gradle
legacy/: build.gradle
plugin/: build.gradle
ppl/: build.gradle
protocol/: build.gradle
release-notes/: opendistro-elasticsearch-sql.release-notes-0.7.0.md  opendistro-elasticsearch-sql.release-notes-0.8.0.md  opendistro-elasticsearch-sql.release-notes-1.0.0.0.md  opendistro-elasticsearch-sql.release-notes-1.1.0.0.md  opendistro-elasticsearch-sql.release-notes-1.10.0.0.md  opendistro-elasticsearch-sql.release-notes-1.2.0.md  opendistro-elasticsearch-sql.release-notes-1.2.1.md  opendistro-elasticsearch-sql.release-notes-1.3.0.0.md  opendistro-elasticsearch-sql.release-notes-1.4.0.md  opendistro-elasticsearch-sql.release-notes-1.6.0.md  opendistro-elasticsearch-sql.release-notes-1.7.0.md  opendistro-elasticsearch-sql.release-notes-1.8.0.md  opendistro-elasticsearch-sql.release-notes-1.9.0.0.md  opendistro-elasticsearch-sql.release-notes-1.9.0.1.md  opendistro-for-elasticsearch-sql.release-notes-0.9.0.0.md  opendistro-for-elasticsearch-sql.release-notes-1.10.1.0.md  opendistro-for-elasticsearch-sql.release-notes-1.10.1.1.md  opendistro-for-elasticsearch-sql.release-notes-1.11.0.0.md  opendistro-for-elasticsearch-sql.release-notes-1.12.0.0.md  opendistro-for-elasticsearch-sql.release-notes-1.13.0.0.md  opendistro-for-elasticsearch-sql.release-notes-1.13.2.1.md  opendistro-for-elasticsearch-sql.release-notes-1.9.0.1.md
reports/: report_2019-12-16-19.json  report_2019-12-17-01.json  report_2019-12-19-01.json  report_2019-12-26-23.json  report_2019-12-30-20.json  report_2019-12-31-21.json  report_2020-01-02-22.json  report_2020-01-03-21.json  report_2020-01-04-02.json
sql-cli/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  NOTICE  README.md  THIRD-PARTY  development_guide.md  requirements-dev.txt  (+2 more)
sql-odbc/src/: CMakeLists.txt  autoconf.h.in
sql-odbc/src/DSNInstaller/: CMakeLists.txt  dsn_installer.cpp
sql-odbc/src/IntegrationTests/: CMakeLists.txt
sql-odbc/src/IntegrationTests/ITODBCAwsAuth/: CMakeLists.txt  pch.cpp  pch.h  test_aws_auth_dsn.reg  test_odbc.ini  test_odbc_aws_auth.cpp
sql-odbc/src/IntegrationTests/ITODBCCatalog/: CMakeLists.txt  test_odbc_catalog.cpp
sql-odbc/src/IntegrationTests/ITODBCConnection/: CMakeLists.txt  test_dsn.reg  test_odbc.ini  test_odbc_connection.cpp  test_odbcinst.ini
sql-odbc/src/IntegrationTests/ITODBCDescriptors/: CMakeLists.txt  test_odbc_descriptors.cpp
sql-odbc/src/IntegrationTests/ITODBCExecution/: CMakeLists.txt  pch.h  test_odbc_execution.cpp
sql-odbc/src/IntegrationTests/ITODBCHelper/: CMakeLists.txt  it_odbc_helper.cpp  it_odbc_helper.h
sql-odbc/src/IntegrationTests/ITODBCInfo/: CMakeLists.txt  pch.cpp  test_odbc_info.cpp
sql-odbc/src/IntegrationTests/ITODBCPagination/: CMakeLists.txt  test_odbc_pagination.cpp
sql-odbc/src/IntegrationTests/ITODBCResults/: CMakeLists.txt  test_odbc_results.cpp
sql-odbc/src/IntegrationTests/ITODBCTableauQueries/: CMakeLists.txt  queries_all.txt  test_odbc_tableau_queries.cpp
sql-odbc/src/PerformanceTests/: CMakeLists.txt
sql-odbc/src/PerformanceTests/PTODBCExecution/: CMakeLists.txt  performance_odbc_execution.cpp
sql-odbc/src/PerformanceTests/PTODBCInfo/: CMakeLists.txt  performance_odbc_info.cpp
sql-odbc/src/PerformanceTests/PTODBCResults/: CMakeLists.txt  performance_odbc_results.cpp
sql-odbc/src/PowerBIConnector/: OdfeSqlOdbcPBIConnector.mproj  OdfeSqlOdbcPBIConnector.pq  OdfeSqlOdbcPBIConnector.query.pq  PowerBIConnector.mproj  PowerBIConnector.pq  PowerBIConnector.query.pq  resources.resx
sql-odbc/src/TableauConnector/odfe_sql_odbc/: connection-dialog.tcd  connectionBuilder.js  connectionResolver.tdr  manifest.xml  odfe_sql_odbc.taco
sql-odbc/src/TableauConnector/odfe_sql_odbc_dev/: README.md  connection-dialog.tcd  manifest.xml  odfe_sql_odbc_dev.taco
sql-odbc/src/TestRunner/: mako_template.html  test_exclude_list.txt  test_runner.py
sql-odbc/src/UnitTests/: CMakeLists.txt
sql-odbc/src/UnitTests/UTAwsSdkCpp/: CMakeLists.txt  test_aws_sdk_cpp.cpp
sql-odbc/src/UnitTests/UTConn/: CMakeLists.txt  test_conn.cpp  test_query_execution.cpp
sql-odbc/src/UnitTests/UTCriticalSection/: CMakeLists.txt  test_critical_section.cpp
sql-odbc/src/UnitTests/UTHelper/: CMakeLists.txt  unit_test_helper.cpp  unit_test_helper.h
sql-odbc/src/UnitTests/UTRabbit/: CMakeLists.txt  test_rabbit.cpp
sql-odbc/src/gtest/: googletest-download.cmake  googletest.cmake
sql-odbc/src/installer/: CMakeLists.txt  patch.xml  postinstall  remove-odfe-dsn.sh
sql-odbc/src/installer/Resources/: README.txt  Welcome.txt  odfe_sql_odbc.tdc
sql-odbc/src/modules/: code-coverage.cmake
sql-odbc/src/odfeenlist/: CMakeLists.txt  elasticenlist.h  msdtc_enlist.cpp
sql-odbc/src/odfesqlodbc/: CMakeLists.txt  bind.c  bind.h  catfunc.h  columninfo.c  columninfo.h  connection.c  convert.c  convert.h  descriptor.c  descriptor.h  dlg_specific.c  dlg_specific.h  dlg_wingui.c  drvconn.c  drvconn.h  environ.c  environ.h  es_api30.c  es_apifunc.h  es_communication.cpp  es_communication.h  es_connection.cpp  es_connection.h  es_driver_connect.cpp  es_driver_connect.h  es_helper.cpp  es_helper.h  es_info.cpp  es_info.h  es_odbc.c  es_odbc.h  es_odbc.rc  es_parse_result.cpp  es_parse_result.h  es_result_queue.cpp  es_result_queue.h  es_semaphore.cpp  es_semaphore.h  es_statement.cpp  (+34 more)
(+3438 files in other folders)
